@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.ntnu.idi.idatt2003</groupId>
-    <artifactId>millions-assignment</artifactId>
+    <artifactId>millions</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -21,14 +21,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
-                <configuration>
-                    <argLine>
-                        --add-opens edu.ntnu.idi.idatt2003.millions/edu.ntnu.idi.idatt2003.millions.model=org.junit.platform.commons
-                        --add-opens edu.ntnu.idi.idatt2003.millions/edu.ntnu.idi.idatt2003.millions.model.calculator=org.junit.platform.commons
-                        --add-opens edu.ntnu.idi.idatt2003.millions/edu.ntnu.idi.idatt2003.millions.controller=org.junit.platform.commons
-                        --add-opens edu.ntnu.idi.idatt2003.millions/edu.ntnu.idi.idatt2003.millions.exception=org.junit.platform.commons
-                    </argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
@@ -55,7 +47,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.11.3</version>
+            <version>6.0.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
